Issue 621:don't start test instances with http-accessible services running as root