@@ -8,14 +8,13 @@ function abort {
    exit 1
 }
 function default {
-   export INSTANCE_NAME="jboss"
-export INSTANCE_HOME="/usr/local/jboss"
-export LOG_DIR="/usr/local/jboss"
+   export INSTANCE_NAME="configure-jboss"
+export INSTANCE_HOME="/tmp/configure-jboss"
+export LOG_DIR="/tmp/configure-jboss"
    return 0
 }
-function jboss {
-   export JBOSS_HOME="/usr/local/jboss"
-   return 0
+function configure-jboss {
+      return 0
 }
 function findPid {
    unset FOUND_PID;
@@ -24,7 +23,7 @@ function findPid {
       return 1
    }
    local PATTERN="$1"; shift
-   local _FOUND=`ps auxwww|grep "$PATTERN"|grep -v " $0"|grep -v grep|awk '{print $2}'`
+   local _FOUND=`ps auxwww|grep "$PATTERN"|grep -v " $0"|grep -v grep|grep -v $$|awk '{print $2}'`
    [ -n "$_FOUND" ] && {
       export FOUND_PID=$_FOUND
       return 0
@@ -43,7 +42,7 @@ function forget {
    local LOG_DIR="$1"; shift
    mkdir -p $LOG_DIR
    findPid $INSTANCE_NAME
-   [ -n "$FOUND_PID" ] && {
+   [ -n "$FOUND_PID" -a -f $LOG_DIR/stdout.log ] && {
       echo $INSTANCE_NAME already running pid [$FOUND_PID]
    } || {
       nohup $SCRIPT >$LOG_DIR/stdout.log 2>$LOG_DIR/stderr.log &
@@ -57,72 +56,71 @@ export PATH=/usr/ucb/bin:/bin:/sbin:/usr/bin:/usr/sbin
 case $1 in
 init)
    default || exit 1
-   jboss || exit 1
-   rm /etc/sudoers
-   cat >> /etc/sudoers <<'END_OF_FILE'
-root ALL = (ALL) ALL
-%wheel ALL = (ALL) NOPASSWD:ALL
-END_OF_FILE
-   chmod 0440 /etc/sudoers
-   mkdir -p /home/users/defaultAdminUsername
-   groupadd -f wheel
-   useradd -s /bin/bash -g wheel -d /home/users/defaultAdminUsername -p 'crypt(randompassword)' defaultAdminUsername
-   mkdir -p /home/users/defaultAdminUsername/.ssh
-   cat >> /home/users/defaultAdminUsername/.ssh/authorized_keys <<'END_OF_FILE'
-publicKey
-END_OF_FILE
-   chmod 600 /home/users/defaultAdminUsername/.ssh/authorized_keys
-   chown -R defaultAdminUsername /home/users/defaultAdminUsername
-   exec 3<> /etc/ssh/sshd_config && awk -v TEXT="PasswordAuthentication no
-   PermitRootLogin no
-   " 'BEGIN {print TEXT}{print}' /etc/ssh/sshd_config >&3
-   /etc/init.d/sshd reload||/etc/init.d/ssh reload
-   awk -v user=^${SUDO_USER:=${USER}}: -v password='crypt(randompassword)' 'BEGIN { FS=OFS=":" } $0 ~ user { $2 = password } 1' /etc/shadow >/etc/shadow.${SUDO_USER:=${USER}}
-   test -f /etc/shadow.${SUDO_USER:=${USER}} && mv /etc/shadow.${SUDO_USER:=${USER}} /etc/shadow
-   grep `hostname` /etc/hosts >/dev/null || awk -v hostname=`hostname` 'END { print $1" "hostname }' /proc/net/arp >> /etc/hosts
-   nslookup yahoo.com >/dev/null || echo nameserver 208.67.222.222 >> /etc/resolv.conf
-   apt-get update -qq
-   which curl || apt-get install -f -y -qq --force-yes curl
-   apt-get install -f -y -qq --force-yes openjdk-6-jdk
-   rm -rf /var/cache/apt /usr/lib/vmware-tools
-   echo "export PATH=\"\$JAVA_HOME/bin/:\$PATH\"" >> /root/.bashrc
-   iptables -I INPUT 1 -p tcp --dport 8080 -j ACCEPT
-   iptables -I RH-Firewall-1-INPUT 1 -p tcp --dport 8080 -j ACCEPT
-   iptables-save
-   curl -q -s -S -L --connect-timeout 10 --max-time 600 --retry 20 -X GET  http://d37gkgjhl3prlk.cloudfront.net/jboss-7.0.0.CR1.tar.gz |(mkdir -p /usr/local &&cd /usr/local &&tar -xpzf -)
-   mkdir -p /usr/local/jboss
-   mv /usr/local/jboss-*/* /usr/local/jboss
-   (cd $JBOSS_HOME/standalone/configuration && sed 's~inet-address value=.*/~any-address/~g' standalone.xml > standalone.xml.new && mv standalone.xml.new standalone.xml)
-   chmod -R oug+r+w /usr/local/jboss
+   configure-jboss || exit 1
    mkdir -p $INSTANCE_HOME
    
    # create runscript header
-   cat > $INSTANCE_HOME/jboss.sh <<END_OF_SCRIPT
+   cat > $INSTANCE_HOME/configure-jboss.sh <<END_OF_SCRIPT
 #!/bin/bash
 set +u
 shopt -s xpg_echo
 shopt -s expand_aliases
-PROMPT_COMMAND='echo -ne "\033]0;jboss\007"'
+PROMPT_COMMAND='echo -ne "\033]0;configure-jboss\007"'
 export PATH=/usr/ucb/bin:/bin:/sbin:/usr/bin:/usr/sbin
-export INSTANCE_NAME='jboss'
-export JBOSS_HOME='$JBOSS_HOME'
+export INSTANCE_NAME='configure-jboss'
 export INSTANCE_NAME='$INSTANCE_NAME'
 export INSTANCE_HOME='$INSTANCE_HOME'
 export LOG_DIR='$LOG_DIR'
 END_OF_SCRIPT
    
    # add desired commands from the user
-   cat >> $INSTANCE_HOME/jboss.sh <<'END_OF_SCRIPT'
+   cat >> $INSTANCE_HOME/configure-jboss.sh <<'END_OF_SCRIPT'
 cd $INSTANCE_HOME
-java  -server -Xms128m -Xmx128m -XX:MaxPermSize=128m -Djava.net.preferIPv4Stack=true -XX:+UseFastAccessorMethods -XX:+TieredCompilation -Xverify:none -Dorg.jboss.resolver.warning=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Djboss.modules.system.pkgs=org.jboss.byteman -Dorg.jboss.boot.log.file=$JBOSS_HOME/standalone/log/boot.log -Dlogging.configuration=file:$JBOSS_HOME/standalone/configuration/logging.properties -jar $JBOSS_HOME/jboss-modules.jar -mp $JBOSS_HOME/modules -logmodule org.jboss.logmanager -jaxpmodule javax.xml.jaxp-provider org.jboss.as.standalone -Djboss.home.dir=$JBOSS_HOME
+rm /etc/sudoers
+cat >> /etc/sudoers <<'END_OF_FILE'
+root ALL = (ALL) ALL
+%wheel ALL = (ALL) NOPASSWD:ALL
+END_OF_FILE
+chmod 0440 /etc/sudoers
+mkdir -p /home/users/web
+groupadd -f wheel
+useradd -s /bin/bash -g wheel -d /home/users/web -p 'crypt(randompassword)' web
+mkdir -p /home/users/web/.ssh
+cat >> /home/users/web/.ssh/authorized_keys <<'END_OF_FILE'
+publicKey
+END_OF_FILE
+chmod 600 /home/users/web/.ssh/authorized_keys
+chown -R web /home/users/web
+exec 3<> /etc/ssh/sshd_config && awk -v TEXT="PasswordAuthentication no
+PermitRootLogin no
+" 'BEGIN {print TEXT}{print}' /etc/ssh/sshd_config >&3
+/etc/init.d/sshd reload||/etc/init.d/ssh reload
+awk -v user=^${SUDO_USER:=${USER}}: -v password='crypt(randompassword)' 'BEGIN { FS=OFS=":" } $0 ~ user { $2 = password } 1' /etc/shadow >/etc/shadow.${SUDO_USER:=${USER}}
+test -f /etc/shadow.${SUDO_USER:=${USER}} && mv /etc/shadow.${SUDO_USER:=${USER}} /etc/shadow
+grep `hostname` /etc/hosts >/dev/null || awk -v hostname=`hostname` 'END { print $1" "hostname }' /proc/net/arp >> /etc/hosts
+nslookup yahoo.com >/dev/null || echo nameserver 208.67.222.222 >> /etc/resolv.conf
+apt-get update -qq
+which curl || apt-get install -f -y -qq --force-yes curl
+apt-get install -f -y -qq --force-yes openjdk-6-jdk
+echo "export PATH=\"\$JAVA_HOME/bin/:\$PATH\"" >> $HOME/.bashrc
+iptables -I INPUT 1 -p tcp --dport 22 -j ACCEPT
+iptables -I INPUT 1 -p tcp --dport 8080 -j ACCEPT
+iptables-save
+curl -q -s -S -L --connect-timeout 10 --max-time 600 --retry 20 -X GET  http://d37gkgjhl3prlk.cloudfront.net/jboss-7.0.0.CR1.tar.gz |(mkdir -p /usr/local &&cd /usr/local &&tar -xpzf -)
+mkdir -p /usr/local/jboss
+mv /usr/local/jboss-*/* /usr/local/jboss
+(cd /usr/local/jboss/standalone/configuration && sed 's~inet-address value=.*/~any-address/~g' standalone.xml > standalone.xml.new && mv standalone.xml.new standalone.xml)
+chmod -R oug+r+w /usr/local/jboss
+chown -R web /usr/local/jboss
+
 END_OF_SCRIPT
    
    # add runscript footer
-   cat >> $INSTANCE_HOME/jboss.sh <<'END_OF_SCRIPT'
+   cat >> $INSTANCE_HOME/configure-jboss.sh <<'END_OF_SCRIPT'
 exit 0
 END_OF_SCRIPT
    
-   chmod u+x $INSTANCE_HOME/jboss.sh
+   chmod u+x $INSTANCE_HOME/configure-jboss.sh
    ;;
 status)
    default || exit 1
